c/examples/writing-a-c-compiler-tests/tests/chapter_14/invalid_parse/malformed_declarator.c
int main(void) {
    /* This declarator is malformed.
     * Pointer declarators  like * cannot appear after
     * parenthesized expressions
     */
    int (*)* y;
    return 0;
}